Fixed text alignment issue in '/'.

--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@
 	right: 50%;
 	width: 50%;
 	text-align: right;
-	transform: translate(-10px, 0%);
+	transform: translate(-10px, -50%);
 }
 
 
